src/objects/AppLog__c.object
<CustomObject>
    <description>App Log - Logging for apps written internally.</description>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AppLog</label>
    <nameField>
        <label>AppLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>